--- a/everyday-color-theory/style.css
+++ b/everyday-color-theory/style.css
@@ -1,8 +1,8 @@
-:root {
+/* :root {
     --red: #FC506E;
     --dark-red: #6f303A;
    --color: #c5465b;
-}
+} */
 
 /* ------------ color changes ------------- */
 
