--- a/gradients/style.css
+++ b/gradients/style.css
@@ -1,7 +1,7 @@
-:root {
+/* :root {
     --yellow: #F9C823;
     --dark-yellow: #6b5b25;
-}
+} */
 
 /* ------------ color changes ------------- */
 
