--- a/interaction-of-color/style.css
+++ b/interaction-of-color/style.css
@@ -1,7 +1,7 @@
-:root {
+/* :root {
     --orange: #FB8C49;
     --dark-orange: #7d4b2c;
-}
+} */
 
 /* ------------ color changes ------------- */
 
