--- a/common.css
+++ b/common.css
@@ -396,13 +396,16 @@ blockquote .lines{
 
 /* ------------ media queries ------------- */
 
-@media (width>750px) {
+@media (width>1150px) {
 
-    /* .layout {
+    .layout {
         display: grid;
         height: 100dvh;
-        grid-template-columns: minmax(320px, 40%) 1fr;
-        grid-template-rows: auto 1fr auto;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows:
+            auto
+            1fr
+            auto;
         grid-template-areas:
             "nav nav"
             "intro content"
@@ -432,9 +435,9 @@ blockquote .lines{
         padding-block: var(--spacing);
     }
 
-    #footer  { grid-area: footer; } */
+    #footer  { grid-area: footer; }
 
-    /* .intro::after {
+    .intro::after {
         content: "";
         position: absolute;
         top: 0;
@@ -442,7 +445,7 @@ blockquote .lines{
         right: 0;
         width: 1.5px; 
         background-color: var(--white);
-    } */
+    }
 
     h1 {
         font-size: 4.9rem;
@@ -456,56 +459,10 @@ blockquote .lines{
     article .chapters:last-of-type { margin-block-end: 4rem; }
 }
 
-@media (width>1400px) {
-
-    .layout {
-        display: grid;
-        height: 100dvh;
-        grid-template-columns: minmax(320px, 40%) 1fr;
-        grid-template-rows: auto 1fr auto;
-        grid-template-areas:
-            "nav nav"
-            "intro content"
-            "footer footer";
-        padding-block: var(--spacing);
-    }
-
-    #nav { 
-        grid-area: nav;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        padding-block-end: var(--spacing);
-    }
-
-    .intro {
-        grid-area: intro;
-        position: relative;
-        padding-inline-end: 2rem;
-    }
-
-    .content { 
-        grid-area: content;
-        overflow: auto;
-        padding-inline-start: 4rem;
-        padding-inline-end: 8rem;
-        padding-block: var(--spacing);
-    }
-
-    #footer  { grid-area: footer; }
+/* @media (width>1400px) {
 
     h1 {
         font-size: 4.5rem;
         line-height: 5.2rem;
     }
-
-    .intro::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        width: 1.5px; 
-        background-color: var(--white);
-    }
-}
+} */
