--- a/everyday-color-theory/style.css
+++ b/everyday-color-theory/style.css
@@ -14,7 +14,10 @@ a:hover {
 .terms,
 .ch-no,
 a:hover,
-blockquote::before {
+blockquote::before,
+a.nav-link-perception,
+.title-sig,
+.nav-link-perception:hover {
     color: var(--red);
 }
 
@@ -23,10 +26,7 @@ blockquote::before {
     background-color: var(--dark-red);
 }
 
-.title-sig {
-    color: var(--dark-red);
-    -webkit-text-stroke-color: var(--red);
-}
+.title-sig { -webkit-text-stroke-color: var(--red); }
 
 blockquote::before {
     color: var(--dark-red);
@@ -42,31 +42,23 @@ a.nav-link-transition {
     text-decoration: none;
 }
 
-a.nav-link-perception {
-    color: var(--red);
-}
-
 .nav-link-home:hover { color: var(--green); }
-.nav-link-perception:hover { color: var(--red); }
 .nav-link-interaction:hover { color: var(--orange); }
 .nav-link-transition:hover { color: var(--yellow); }
 
 
 /* ------------ header ------------- */
 
-.short-header{
+.short-header {
     display: grid;
     grid-template-columns: 2fr 2fr;
     grid-template-rows: auto auto;
     grid-template-areas:
     "one one"
     "two three";
-    /* gap: 1rem; */
 }
 
-.short-header p {
-    padding-block: 0.2rem;
-}
+.short-header p { padding-block: 0.2rem; }
 
 .subtitle { grid-area: one; }
 .author { grid-area: two; }
