--- a/gradients/style.css
+++ b/gradients/style.css
@@ -13,18 +13,15 @@ a:hover {
 .terms,
 .ch-no,
 a:hover,
-blockquote::before {
+blockquote::before,
+a.nav-link-transition,
+.nav-link-transition:hover {
     color: var(--yellow);
 }
 
 .ch-no {
     border-color: var(--yellow);
     background-color: var(--dark-yellow);
-}
-
-.title-sig {
-    color: var(--dark-yellow);
-    -webkit-text-stroke-color: var(--yellow);
 }
 
 blockquote::before {
@@ -41,11 +38,6 @@ a.nav-link-interaction {
     text-decoration: none;
 }
 
-a.nav-link-transition {
-    color: var(--yellow);
-}
-
 .nav-link-home:hover { color: var(--green); }
 .nav-link-perception:hover { color: var(--red); }
 .nav-link-interaction:hover { color: var(--orange); }
-.nav-link-transition:hover { color: var(--yellow); }
