--- a/home.css
+++ b/home.css
@@ -15,10 +15,10 @@ html {scroll-behavior: smooth;}
 h1.nav-title {
     margin-block: 10rem;
     font-size: 3rem;
-    line-height: 1.1;
+    line-height: 1.2;
     display: flex;
     flex-direction: column;
-    gap: var(--spacing);
+    /* gap: var(--spacing); */
 }
 
 
@@ -151,6 +151,7 @@ h2 {
     margin-block: var(--spacing);
 }
 
+
 .running-track {
     display: inline-flex;
     animation: marquee 10s linear infinite;
@@ -179,13 +180,20 @@ h2 {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    margin-block: 4rem;
+    margin-block: 5rem;
 }
 
 h2.colophon-title {
     padding-block-end: 0;
     margin-block-end: 0;
     margin-block-start: 2rem;
+}
+
+.colophon-left {
+        flex: 0 0 300px;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
 }
 
 /* ------------ image ------------- */
@@ -200,6 +208,10 @@ img {
 }
 
 /* ------------ media queries ------------- */
+
+@media (min-width:500px) {
+    h1.nav-title { font-size: 4rem; }
+}
 
 @media (min-width:750px) {
 
@@ -243,9 +255,6 @@ img {
     }
 
     .colophon-left {
-        flex: 0 0 300px;
-        display: flex;
-        flex-direction: column;
         gap: 1.5rem;
         align-items: flex-start;
         padding-inline-start: var(--spacing);
@@ -273,7 +282,7 @@ img {
 
 @media (min-width:950px) {
 
-    h1.nav-title { font-size: 7rem; }
+    h1.nav-title { font-size: 8rem; }
 
     .meta-home h2 {
         font-size: 4.5rem;
@@ -286,5 +295,16 @@ img {
         padding-inline: 3rem;
     }
 
+}
+
+@media (min-width:1130px) {
+    .meta-home h2 { 
+        font-size: 5rem;
+        line-height: 5rem;
+    }
+}
+
+@media (min-width:1200px) {
+    h1.nav-title { font-size: 10rem; }
 }
 
