adjusting article intro

--- a/interaction-of-color/style.css
+++ b/interaction-of-color/style.css
@@ -1,8 +1,3 @@
-/* :root {
-    --orange: #FB8C49;
-    --dark-orange: #7d4b2c;
-} */
-
 /* ------------ color changes ------------- */
 
 .terms,
@@ -38,7 +33,7 @@ a.nav-link-transition {
     text-decoration: none;
 }
 
-/* ------------ diagrams ------------- */
+/* ---------------- diagrams -----------------*/
 /* ------------ multi-temp ------------- */
 
 .multi-temperature {
