--- a/common.css
+++ b/common.css
@@ -11,10 +11,13 @@
     /* ------------ dark mode colors ------------- */
     --red: #FC506E;
     --dark-red: #6f303a;
+    --darker-red: #481e24;
     --orange: #FB8C49;
     --dark-orange: #7d4b2c;
+    --darker-orange: #59321c;
     --yellow: #F9C823;
     --dark-yellow: #6b5b25;
+    --darker-yellow: #4a3c19;
 
     --penrose-stroke: #c5465b;
     --penrose-fill-1: #631f2e;
@@ -30,10 +33,13 @@
     /* ------------ light mode colors ------------- */
     --green: #3CB371;
     --light-green: #D8F3E6;
+    --lighter-green: #ECF9F3;
     --blue: #3B82F6;
     --light-blue: #DBEAFE;
+    --lighter-blue: #EEF5FF;
     --purple: #A855F7;
-    --light-purple: #F3E8FF;
+    --light-purple: #dcc8f1;
+    --lighter-purple: #FAF4FF;
 
     --penrose-stroke: #14532d;
     --penrose-fill-1: #A3EAC2;
@@ -43,10 +49,13 @@
     /* ------------ color mapping ------------- */
     --red: var(--green);
     --dark-red: var(--light-green);
+    --darker-red: var(--lighter-green);
     --orange: var(--blue);
     --dark-orange: var(--light-blue);
+    --darker-orange: var(--lighter-blue);
     --yellow: var(--purple);
     --dark-yellow: var(--light-purple);
+    --darker-yellow: var(--lighter-purple);
   }
 }
 
@@ -177,18 +186,21 @@ p, small {
 /* ------------ intro ------------- */
 
 .intro {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     padding-block: var(--spacing);
     flex: 1 0 auto;
+    border-bottom: 1.5px solid var(--white);
 }
 
 .meta {
     display: grid;
     margin-block-end: var(--spacing);
     gap: var(--spacing);
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: auto 1fr;
+    column-gap: 2rem;
     grid-template-rows: auto auto;
     grid-template-areas:
     "two three"
@@ -343,9 +355,7 @@ blockquote .lines{
 }
 
 .penrose-triangle .cls-1 { fill: var(--penrose-fill-1); }
-
 .penrose-triangle .cls-2 { fill: var(--penrose-fill-2); }
-
 .penrose-triangle .cls-4 { fill: var(--penrose-fill-3); }
 
 .penrose-triangle .cls-3 {
@@ -386,11 +396,9 @@ blockquote .lines{
     to   { transform: translate(30px, 30px); }
 }
 
-
 .yellow-circle {
     width: 90%;
     height: 90%;
-    /* margin: auto; */
     border-radius: 50%;
     border: 3px solid var(--yellow);
     background: radial-gradient(circle, var(--dark-yellow) 20%, transparent 80%);
@@ -398,20 +406,16 @@ blockquote .lines{
 }
 
 @keyframes pulse-fill {
-    0% {
-        background: radial-gradient(circle, var(--dark-yellow) 15%, transparent 80%);
-    }
-    
-    50% {
-        background: radial-gradient(circle, var(--dark-yellow) 25%, transparent 80%);
-    }
-
-    100% {
-        background: radial-gradient(circle, var(--dark-yellow) 35%, transparent 80%);
-    }
+    0%   { background: radial-gradient(circle, var(--dark-yellow) 15%, transparent 80%); }
+    50%  { background: radial-gradient(circle, var(--dark-yellow) 25%, transparent 80%); }
+    100% { background: radial-gradient(circle, var(--dark-yellow) 35%, transparent 80%); }
 }
 
 /* ------------ media queries ------------- */
+
+@media (min-width: 400px) {
+    .meta {grid-template-columns: 2fr 3fr;}
+}
 
 @media (min-width: 750px) {
     
@@ -425,7 +429,7 @@ blockquote .lines{
     .layout {
         display: grid;
         height: 100dvh;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 2fr 3fr;
         grid-template-rows:
             auto
             1fr
@@ -447,38 +451,48 @@ blockquote .lines{
 
     .intro {
         grid-area: intro;
-        position: relative;
         padding-inline-end: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        border-block-end: none;
+        border-inline-end: 1.5px solid var(--white);
+    }
+
+    .intro-text-group {
+        display: flex;
+        flex-direction: column;
     }
 
     .content { 
         grid-area: content;
         overflow: auto;
-        padding-inline-start: 2rem;
-        padding-inline-end: var(--spacing);
+        padding-inline: 3rem;
         padding-block: var(--spacing);
     }
 
     #footer  { grid-area: footer; }
 
-    .intro::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        width: 1.5px; 
-        background-color: var(--white);
+    .shape {
+        margin-top: 4rem;
+        margin-inline: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
+
+    section.intro .shape {
+        transform: scale(1.25);
+        transform-origin: center;
+    }
+
+    .meta {grid-template-columns: 2fr 3fr;}
 
     h1 {
-        font-size: 4.9rem;
-        line-height: 5.2rem;
+        font-size: 4rem;
+        line-height: 4.2rem;
     }
-
-    .meta {grid-template-columns: 1fr 3fr;}
-
-    .shape {margin: 0;}
 
     article .chapters:last-of-type { margin-block-end: 4rem; }
 }
