--- a/home.css
+++ b/home.css
@@ -97,18 +97,18 @@ h2 {
 /* ------------ card hover states ------------- */
 
 #nav-links-home a.perception-card:hover {
-    background-color: var(--dark-red);    
+    background-color: var(--darker-red);    
 }
 
 #nav-links-home a.interaction-card:hover {
-    background-color: var(--dark-orange);    
+    background-color: var(--darker-orange);    
 }
 
 #nav-links-home a.transition-card:hover {
-    background-color: var(--dark-yellow);   
+    background-color: var(--darker-yellow);   
 }
 
-/* ------------ interaction card hover squares animation ------------- */
+/* ------------ card hover animation ------------- */
 
 #nav-links-home a.interaction-card:hover .square-1 {
     animation: move-square-1-hover 3s ease-in-out forwards;
@@ -126,6 +126,16 @@ h2 {
 @keyframes move-square-2-hover {
     from { transform: translate(0, 0); }
     to   { transform: translate(30px, 30px); }
+}
+
+#nav-links-home a.interaction-card:hover .yellow-circle {
+    animation: pulse-fill-hover 4.5s ease-in-out 1 forwards;
+}
+
+@keyframes pulse-fill-hover {
+    0% { background: radial-gradient(circle, var(--dark-yellow) 15%, transparent 80%); }
+    50% { background: radial-gradient(circle, var(--dark-yellow) 25%, transparent 80%); }
+    100% { background: radial-gradient(circle, var(--dark-yellow) 35%, transparent 80%); }
 }
 
 
@@ -148,7 +158,7 @@ h2 {
     white-space: nowrap;
     border-block-start: 1.5px solid var(--white);
     border-block-end: 1.5px solid var(--white);
-    margin-block: var(--spacing);
+    margin-block-end: 6rem;
 }
 
 
@@ -299,8 +309,8 @@ img {
 
 @media (min-width:1130px) {
     .meta-home h2 { 
-        font-size: 5rem;
-        line-height: 5rem;
+        font-size: 6rem;
+        line-height: 6rem;
     }
 }
 
