--- a/common.css
+++ b/common.css
@@ -5,34 +5,36 @@
     --body-text: "Victor Mono", system-ui, sans-serif;
     --spacing: 1rem;
 
-    --white: #e9e9e9;
+    --white: #e0e0e0;
     --background: #212121;
 
     /* ------------ dark mode colors ------------- */
     --red: #FC506E;
+    --desaturated-red: #bc394f;
     --dark-red: #6f303a;
     --darker-red: #481e24;
     --orange: #FB8C49;
     --dark-orange: #7d4b2c;
     --darker-orange: #59321c;
     --yellow: #F9C823;
-    --dark-yellow: #6b5b25;
+    --dark-yellow: #766019;
     --darker-yellow: #4a3c19;
-    --green: #3CB371;
+    --green: #51a074;
     --light-green: #D8F3E6;
     --lighter-green: #ECF9F3;
     --blue: #3B82F6;
     --light-blue: #DBEAFE;
     --lighter-blue: #EEF5FF;
     --purple: #A855F7;
-    --light-purple: #dcc8f1;
+    /* --desaturated-purple:  */
+    --light-purple: #d9cae9;
     --lighter-purple: #FAF4FF;
 
     /* ------------ penrose dark mode ------------- */
-    --penrose-stroke: #c5465b;
-    --penrose-fill-1: #631f2e;
-    --penrose-fill-2: #772a3b;
-    --penrose-fill-3: #6c2434;
+    --penrose-stroke: #aa3044;
+    --penrose-fill-1: #631f2ee5;
+    --penrose-fill-2: #772a3bd5;
+    --penrose-fill-3: #6c2434da;
 
     --home-hover: #3B82F6;
 }
@@ -43,13 +45,14 @@
     --background: #fdfaf5;
 
     /* ------------ penrose light mode ------------- */
-    --penrose-stroke: #14532d;
-    --penrose-fill-1: #A3EAC2;
-    --penrose-fill-2: #B9F0D1;
-    --penrose-fill-3: #CFF5DF;
+    --penrose-stroke: #51a074;
+    --penrose-fill-1: #bcead0;
+    --penrose-fill-2: #ceeedd;
+    --penrose-fill-3: #e1fbeb;
 
     /* ------------ color mapping ------------- */
     --red: var(--green);
+    --desaturated-red: var(--green);
     --dark-red: var(--light-green);
     --darker-red: var(--lighter-green);
     --orange: var(--blue);
@@ -125,6 +128,13 @@ h2 {
     margin-block-end: 4rem;
 }
 
+.chapters h2 span:not(.ch-no) {
+    font-size: 2.2rem;
+    line-height: 2.8rem;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
 h3 {
     font-family: var(--heading-text);
     font-size: 1.4rem;
@@ -140,7 +150,7 @@ h3 {
 
 p, small {
     font-family: var(--body-text);
-    font-size: 1rem;
+    font-size: var(--spacing);
     font-weight: 400;
     line-height: 1.9rem;
     padding-block: 1.5rem;
@@ -149,7 +159,7 @@ p, small {
 
 .italicize {font-style: italic;}
 
-.red-title { color: var(--red); }
+.red-title { color: var(--desaturated-red); }
 .orange-title { color: var(--orange); }
 .yellow-title { color: var(--yellow); }
 
@@ -258,12 +268,13 @@ a {
 blockquote {
     position: relative;
     margin-inline-start: 3rem;
-    margin-block: 8rem;
+    margin-inline-end: var(--spacing);
+    margin-block: 4rem;
     padding-inline-start: 2rem;
     color: var(--white);
     z-index: 1;
     font-family: var(--body-text);
-    font-size: 1rem;
+    font-size: var(--spacing);
     line-height: 1.9rem;
 }
 
@@ -272,8 +283,8 @@ blockquote p {
     padding: 0;
     padding-block: 2rem;
     font-family: var(--heading-text);
-    font-size: 1.8rem;
-    line-height: 2.5rem; 
+    font-size: 1.5rem;
+    line-height: 2.3rem; 
 }
 
 blockquote::before {
@@ -299,13 +310,13 @@ blockquote::before {
     font-weight: 600;
     font-size: 2rem;
     display: inline-block;
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
 }
 
 .lines {
-    padding: var(--spacing);
+    padding-block: var(--spacing);
+    padding-inline: 0.5rem;
     margin-block: 3rem;
-    padding-block: 2rem;
     border-top: 1.5px solid var(--white);
     border-bottom: 1.5px solid var(--white);
     text-align: center;
@@ -413,14 +424,7 @@ blockquote .lines{
     height: 100%;
     border-radius: 50%;
     border: 3px solid var(--yellow);
-    background: radial-gradient(circle, var(--dark-yellow) 20%, transparent 80%);
-    animation: pulse-fill 4.5s ease-in-out 1 forwards;
-}
-
-@keyframes pulse-fill {
-    0%   { background: radial-gradient(circle, var(--dark-yellow) 15%, transparent 80%); }
-    50%  { background: radial-gradient(circle, var(--dark-yellow) 25%, transparent 80%); }
-    100% { background: radial-gradient(circle, var(--dark-yellow) 35%, transparent 80%); }
+    background: radial-gradient(circle, var(--dark-yellow) 10%, transparent 80%);
 }
 
 /* ------------ media queries ------------- */
@@ -497,7 +501,7 @@ blockquote .lines{
         grid-area: content;
         overflow: auto;
         padding-inline: 3rem;
-        padding-block: var(--spacing);
+        padding-block: 3rem;
     }
 
     #footer  { grid-area: footer; }
@@ -524,7 +528,8 @@ blockquote .lines{
         line-height: 4.2rem;
     }
 
-    article .chapters:last-of-type { margin-block-end: 4rem; }
+    .chapters:first-of-type { margin-block-start: 0; }
+    .chapters:last-of-type  { margin-block-end: 4rem; }
 }
 
 /* 
