--- a/common.css
+++ b/common.css
@@ -19,21 +19,21 @@
     --yellow: #F9C823;
     --dark-yellow: #766019;
     --darker-yellow: #4a3c19;
-    --green: #51a074;
+    --green: #4ba372;
     --light-green: #D8F3E6;
     --lighter-green: #ECF9F3;
     --blue: #3B82F6;
     --light-blue: #DBEAFE;
     --lighter-blue: #EEF5FF;
-    --purple: #A855F7;
-    --light-purple: #d9cae9;
+    --purple: #a356eb;
+    --light-purple: #e0cff1;
     --lighter-purple: #FAF4FF;
 
     /* ------------ penrose dark mode ------------- */
     --penrose-stroke: #aa3044;
-    --penrose-fill-1: #5A2731;
+    --penrose-fill-1: #582832;
     --penrose-fill-2: #70303C;
-    --penrose-fill-3: #472228;
+    --penrose-fill-3: #542a30;
 
     --home-hover: #3B82F6;
 }
@@ -62,6 +62,7 @@
     --darker-yellow: var(--lighter-purple);
 
     --home-hover: #FC506E;
+    h1, h2 { color: #3b3b3b; }
   }
 }
 
@@ -131,7 +132,7 @@ h2 {
     font-size: 2.2rem;
     line-height: 2.8rem;
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 h3 {
@@ -150,8 +151,8 @@ h3 {
 p, small {
     font-family: var(--body-text);
     font-size: var(--spacing);
-    font-weight: 400;
-    line-height: 1.9rem;
+    font-weight: 420;
+    line-height: 2rem;
     padding-block: 1.5rem;
     color: var(--white);
 }
@@ -423,7 +424,7 @@ blockquote .lines{
     height: 100%;
     border-radius: 50%;
     border: 3px solid var(--yellow);
-    background: radial-gradient(circle, var(--dark-yellow) 10%, transparent 80%);
+    background: radial-gradient(circle, var(--dark-yellow) 20%, transparent 90%);
 }
 
 /* ------------ media queries ------------- */
@@ -531,16 +532,14 @@ blockquote .lines{
     .chapters:last-of-type  { margin-block-end: 4rem; }
 }
 
-/* 
-@media (min-width: 1500px) {
-
-    .square {
-        width: 150px;
-        height: 150px;
+/* @media (min-width: 1520px) {
+    
+    .layout {
+        grid-template-columns: 1fr 1fr;
     }
 
-    section.intro .shape {
-        transform: scale(1.5);
-        transform-origin: center;
+    .content > article {
+        width: clamp(60ch, 60% + 10vw, 90ch);
+        margin-inline: auto;
     }
 } */
