--- a/home.css
+++ b/home.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
 :root {
-    --experience-fill-dark: #1f4a99;       /* blue */
-    --experience-stroke-dark: #3B82F6;     /* darker blue */
-    --experience-fill-light: #FDC9D3;      /* red */
-    --experience-stroke-light: #FC506E;    /* lighter red */
+    --experience-fill-dark: #173c82;
+    --experience-stroke-dark: #3B82F6;
+    --experience-fill-light: #FDC9D3;
+    --experience-stroke-light: #FC506E;
 }
 
 @media (prefers-color-scheme: light) {
@@ -325,9 +325,14 @@ img {
     }
 
     .colophon-left {
+        flex: 0 0 300px;
+        display: flex;
+        flex-direction: column;
         gap: 1.5rem;
         align-items: flex-start;
         padding-inline-start: var(--spacing);
+        position: sticky;
+        top: 2rem;
     }
 
     img {
@@ -350,5 +355,13 @@ img {
 
 @media (min-width:1200px) {
     h1.nav-title { font-size: 10rem; }
+}
+
+@media (min-width: 1900px) {
+    h1.nav-title { font-size: 12rem; }
+}
+
+@media (min-width: 2300px) {
+    h1.nav-title { font-size: 14rem; }
 }
 
